src/objects/Application3__c.object
<CustomObject>
    <fields>
        <fullName>Compliance_Flag_Notification__c</fullName>
        <label>Compliance Flag</label>
        <picklist>
            <picklistValues>
                <fullName>Flagged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Flagged</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Compliance_Flag_OC__c</fullName>
        <label>Compliance Flag</label>
        <picklist>
            <picklistValues>
                <fullName>Flagged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Flagged</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Compliance_Flag_TypeofOrg__c</fullName>
        <label>Compliance Flag</label>
        <picklist>
            <picklistValues>
                <fullName>Flagged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Flagged</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Compliance_Flag__c</fullName>
        <label>Compliance Flag</label>
        <picklist>
            <picklistValues>
                <fullName>Flagged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Flagged</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Concept_Paper_Due_Date__c</fullName>
        <description>for Concept Paper Reporting purpose</description>
        <formula>NOFA_RFP__r.Concept_Paper_Due_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Concept Paper Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Concept_Paper_Input_Deadline__c</fullName>
        <formula>NOFA_RFP__r.Concept_Paper_Input_Deadline__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Concept Paper Input Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Concept_Paper_Name__c</fullName>
        <label>Concept Paper Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_NumberNCCCCO__c</fullName>
        <label>Cell Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact_Number__c</fullName>
        <label>Contact Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact_Numberprimary__c</fullName>
        <label>Contact Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Continuation_Changes1__c</fullName>
        <label>Continuation Changes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Continuation_Changes__c</fullName>
        <label>Continuation Changes</label>
        <length>50000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Corp_Program_Short_Code__c</fullName>
        <formula>NOFA_RFP__r.Corporate_Program__r.Short_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Corp Program Short Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corporate_Program__c</fullName>
        <formula>NOFA_RFP__r.Corporate_Program__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Corporate Program</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Effectiveness_Budget_Adequacy__c</fullName>
        <label>Cost-Effectiveness &amp; Budget Adequacy</label>
        <length>50000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Cost_Effectiveness_and_Budget_Adequacy_C__c</fullName>
        <label>Cost Effectiveness and Budget Adequacy</label>
        <length>300</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Cost_Effectiveness_and_Budget_Adequacy__c</fullName>
        <label>Cost Effectiveness and Budget Adequacy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Share__c</fullName>
        <inlineHelpText>Does this Program require cost share?</inlineHelpText>
        <label>Cost Share</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Could_contracted_labor_be_used_App_Setup__c</fullName>
        <description>Could contracted labor be used? Added to Application Setup Section</description>
        <inlineHelpText>Could the proposed Project be accomplished by contracted labor?</inlineHelpText>
        <label>Could contracted labor be used?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Could_contracted_labor_be_used_Concept__c</fullName>
        <description>Could contracted labor be used? Added to NOFO Concept Paper Section</description>
        <inlineHelpText>Could the proposed Project be accomplished by contracted labor?</inlineHelpText>
        <label>Could contracted labor be used?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Could_inclement_weather_impact_plan_App__c</fullName>
        <inlineHelpText>Could inclement weather impact this project?</inlineHelpText>
        <label>Could inclement weather impact plan?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Could_inclement_weather_impact_plan_Con__c</fullName>
        <description>Could inclement weather impact plan? Added to NOFO concept Section</description>
        <inlineHelpText>Could inclement weather impact this project?</inlineHelpText>
        <label>Could inclement weather impact plan?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Could_this_be_accomplished_with_contract__c</fullName>
        <label>Can Contracted Labor be Used?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Counties__c</fullName>
        <label>Counties</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DUNS__c</fullName>
        <formula>Project__r.Organization__r.DUNS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DUNS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_FAPIIS_Review__c</fullName>
        <description>Field is Used for Final Decision Process of Application. 
US # 1783. KY</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Received__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Date Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Received_by_State__c</fullName>
        <description>Date Received by State</description>
        <inlineHelpText>Date Received by State</inlineHelpText>
        <label>Date Received by State</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Define_Community_Need__c</fullName>
        <inlineHelpText>This may include poverty rates, education levels, or general assets and challenges facing the community, which relate to the project</inlineHelpText>
        <label>Define Community Need</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Demonstrates_Ethics_Integrity__c</fullName>
        <description>Field is Used for Final Decision Process of Application. 
US # 1783. KY</description>
        <label>Demonstrates Ethics &amp; Integrity</label>
        <picklist>
            <controllingField>Information_available_FAPIIS_Review__c</controllingField>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Department_Name__c</fullName>
        <label>Department Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Describe_Volunteer_Outreach__c</fullName>
        <label>Describe Volunteer Outreach</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Describe_accessibility_of_the_proj_site__c</fullName>
        <inlineHelpText>&quot;Please describe the accessibility of the work site for persons requiring mobility, vision or hearing accommodation. If the work site is wheelchair accessible please describe the accessibility to include the work area and restrooms.</inlineHelpText>
        <label>Primary Work Site Accessibility</label>
        <length>256</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Describe_additional_background_checks_Ap__c</fullName>
        <description>Describe additional background checks Added by Application Setup Section</description>
        <label>Describe additional background checks</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Describe_additional_background_checks_co__c</fullName>
        <description>Describe additional background checks Added to NOFO Cencept Paper Section</description>
        <label>Describe additional background checks</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Describe_the_Application_Organization__c</fullName>
        <description>This field is for Notification of Intent to Apply.</description>
        <label>Describe the Application Organization</label>
        <picklist>
            <picklistValues>
                <fullName>Governor-Appointed State Commission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public/private nonprofit organizations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Institution of higher education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gov. entities within states/territories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gov-recognized veteran service org.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Labor organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partnerships and Consortia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indian Tribe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grantmaking institution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eligible Partnership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (please specify)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Descriptive_Title_of_Applicant_s_Project__c</fullName>
        <label>Descriptive Title of Applicant&apos;s Project</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Difficult_or_Uncomfortable_Conditions__c</fullName>
        <inlineHelpText>Are there other situations that could result in difficult or uncomfortable conditions for members such as extreme weather, allergies, phobias, ticks, poison ivy or poison oak, etc.?</inlineHelpText>
        <label>Difficult or Uncomfortable Conditions?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Disaster_Number_Application__c</fullName>
        <label>Disaster Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disaster_Number_ConceptPaper__c</fullName>
        <label>Disaster Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disaster_Number_Funding_DOE__c</fullName>
        <description>Field is shown when NCCC Dates &amp; Questions is checked on NOFA. KY</description>
        <label>Disaster Number/Funding DOE</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disaster_Services_CP__c</fullName>
        <description>This field is for Concept Paper type of Application.</description>
        <label>Disaster Services</label>
        <picklist>
            <picklistValues>
                <fullName>Disaster Assistance Provided</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Disaster_Services__c</fullName>
        <label>Disaster Services</label>
        <picklist>
            <picklistValues>
                <fullName>Disaster Assistance Provided</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Disaster_Type_App__c</fullName>
        <description>Disaster Type Added to Application Setup Section</description>
        <label>Disaster Type</label>
        <picklist>
            <picklistValues>
                <fullName>Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Firefighting</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Disaster_Type_Application__c</fullName>
        <label>Disaster Type</label>
        <picklist>
            <picklistValues>
                <fullName>Preparedness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Readiness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mitigation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recovery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Firefighting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fire Management</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Disaster_Type_CP__c</fullName>
        <label>Disaster Type</label>
        <picklist>
            <picklistValues>
                <fullName>Firefighting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fire Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mitigation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preparedness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recovery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Response</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Disaster_Type_Con_Paper__c</fullName>
        <label>Disaster Type</label>
        <picklist>
            <picklistValues>
                <fullName>Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Firefighting</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Disaster_Type_ConceptPaper__c</fullName>
        <label>Disaster Type</label>
        <picklist>
            <picklistValues>
                <fullName>Preparedness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Readiness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mitigation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recovery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Firefighting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fire Management</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Disaster_Type__c</fullName>
        <label>Disaster Type</label>
        <picklist>
            <picklistValues>
                <fullName>Fire Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mitigation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preparedness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recovery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fire Fighting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Readiness</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Display_Alert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display Alert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Division_Name__c</fullName>
        <label>Division Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Documents_Foster_Grandparents_Only__c</fullName>
        <label>Documents- Foster Grandparents Only</label>
        <picklist>
            <picklistValues>
                <fullName>Articles of Incorporation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPA Certification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>List names of Funding Orgs/Sources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Statement of Date of last A133 audit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Statement-applicant subject to A133audit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Documents_RSVP_Only__c</fullName>
        <label>Documents - RSVP Only</label>
        <picklist>
            <picklistValues>
                <fullName>Articles of Incorporation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Federal Financial Report User Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Management Survey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Statement Audit or SF-990</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recipient Contact Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Statement of Audit Status</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Documents_SCP_Fixed_Only__c</fullName>
        <label>Documents- SCP Fixed Only</label>
        <picklist>
            <picklistValues>
                <fullName>Federal Financial Report User Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Management Survey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Statement Audit or SF-990</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recipient Contact Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Statement of Audit Status</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Documents_SCP_Only__c</fullName>
        <label>Documents- SCP Only</label>
        <picklist>
            <picklistValues>
                <fullName>Federal Financial Report User Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Management Survey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Statement Audit or SF-990</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recipient Contact Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Statement of Audit Status</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Documents__c</fullName>
        <inlineHelpText>All documents are required to be uploaded</inlineHelpText>
        <label>Documents</label>
        <picklist>
            <picklistValues>
                <fullName>Aggregated Dollar Amounts of funding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Board of Directors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comm. Advisory Group Names &amp; Addresses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IRS Certification of Non-Profit Status</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negotiated Indirect Cost Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Organizational Chart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Director&apos;s Job Description</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roster of Volunteer Stations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Draft__c</fullName>
        <label>Draft</label>
        <picklist>
            <picklistValues>
                <fullName>True</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>False</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dup_Sub_App_Auto_Number__c</fullName>
        <label>Dup Sub - App Auto Number</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dup_Sub_App_Number__c</fullName>
        <displayFormat>{0000}</displayFormat>
        <label>Dup Sub App Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>EO_12372_Process__c</fullName>
        <inlineHelpText>Is this Application Subject to Review by State Executive Order 12372 Process?</inlineHelpText>
        <label>EO 12372 Process</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Economic_Opportunities_CP__c</fullName>
        <description>This field is for Concept Paper type of Application.</description>
        <label>Economic Opportunities</label>
        <picklist>
            <picklistValues>
                <fullName>Asset Building</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Economic Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Literacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Find Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Housing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Micro-enterprise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Economic_Opportunities__c</fullName>
        <label>Economic Opportunities</label>
        <picklist>
            <picklistValues>
                <fullName>Asset Building</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Economic Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Literacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Find Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Housing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Micro-enterprise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Education_CP__c</fullName>
        <description>This field is for Concept Paper type of Application.</description>
        <label>Education</label>
        <picklist>
            <picklistValues>
                <fullName>K-12 Success</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post-HS Education Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School Readiness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teacher Corps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Education__c</fullName>
        <label>Education</label>
        <picklist>
            <picklistValues>
                <fullName>Teacher Corps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post-HS Education Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K-12 Success</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School Readiness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>EmailNCCCCO__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_NCCC__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Emaill__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Emailprimary__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employer_Taxpayer_Number_EIN_TIN__c</fullName>
        <formula>Project__r.Organization__r.EIN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employer/Taxpayer Number (EIN/TIN)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Energy_Conservation_CP__c</fullName>
        <description>This field is for Concept Paper type of Application.</description>
        <label>Energy Conservation</label>
        <picklist>
            <picklistValues>
                <fullName>Capacity Building &amp; Leverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy Efficiency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engaging participants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Housing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individuals Assisted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Veterans &amp; Families Served</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Energy_Conservation__c</fullName>
        <label>Energy Conservation</label>
        <picklist>
            <picklistValues>
                <fullName>Individuals Assisted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engaging participants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capacity Building &amp; Leverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy Efficiency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Housing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Veterans &amp; Families Served</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Energy_Efficiency_CP__c</fullName>
        <label>Energy Efficiency</label>
        <picklist>
            <picklistValues>
                <fullName>Green Jobs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
</CustomObject>